<resources>
    <string name="app_name">9358技师</string>
    <string name="app_version_code">v1.5.2</string>
    <string name="token_expired_error_msg">账号在其他的地方登录，请重新登录</string>
    <string name="login_activity_input_username">请输入账号</string>
    <string name="login_activity_input_password">请输入密码</string>
    <string name="login_activity_hint_username_not_empty">用户名不能为空</string>
    <string name="login_activity_hint_password_not_empty">密码不能为空</string>
    <string name="login_activity_login_tips">您的手机号已注册，请输入密码完成登录</string>
    <string name="login_account_hint">输入手机号</string>
    <string name="login">登录</string>
    <string name="login_phone"><u>使用手机号码登录</u></string>
    <string name="login_tech_no"><u>使用技师编号登录</u></string>
    <string name="find_password">找回密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="login_signing">正在登录...</string>
    <string name="next_step">下一步</string>
    <string name="complete">完成</string>
    <string name="note">注：</string>
    <string name="pre_login_tips">进行身份验证后系统会自动判断你是否为注册用户，并自动衔接后续的操作</string>
    <string name="default_tips">服务器异常</string>
    <string name="default_user_name">匿名用户</string>
    <string name="company_name">深圳市小摩豆网络科技有限公司</string>
    <string name="amount_unit_yuan">元</string>
    <string name="list_item_loading">点击或者上拉，加载更多</string>
    <string name="list_item_no_more"> ^_^, 没有更多数据</string>
    <string name="list_item_empty">=_=!!, 还没有数据哦</string>
    <string name="register_password_hint">请输入6-20位新密码，仅限字母和数字</string>
    <string name="login_password_hint">请输入6-20位密码，仅限字母和数字</string>
    <string name="register_tips">您的手机号未注册，请输入相关信息完成注册</string>
    <string name="register_security_code_hint">输入验证码</string>
    <string name="register_send_security_code">发送验证码</string>
    <string name="invite_club">会所邀请码(必填)</string>
    <string name="invite_tech">技师邀请码(选填)</string>
    <string name="register_resend_security_code">重新发送(%1$d)</string>
    <string name="input_serial_no">输入店内编号</string>
    <string name="nick_name">昵称</string>
    <string name="select_gender">选择性别</string>
    <string name="empty_view_loading">加载中...</string>
    <string name="empty_view_empty">暂无数据</string>
    <string name="empty_view_failed">数据加载失败，点击刷新</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="main_chat">消息</string>
    <string name="main_em_chat">聊天</string>
    <string name="main_conversion">联系人</string>
    <string name="main_order">订单</string>
    <string name="main_market">营销</string>
    <string name="main_personal">我</string>
    <string name="main_page">首页</string>
    <string name="message_fragment_title">我的消息</string>
    <string name="cant_chat_with_yourself">不能和自己聊天</string>
    <string name="button_send">发送</string>
    <string name="search_hint">搜索</string>
    <string name="no_more_messages">没有更多的消息了</string>
    <string name="messages_cannot_be_empty">发送内容不能为空，请重新输入</string>
    <string name="order_fragment_title">我的订单</string>
    <string name="copuon_fragment_title">分享有礼</string>
    <string name="personal_fragment_title">个人中心</string>
    <string name="personal_fragment_button_invite">输入会所邀请码</string>
    <string name="personal_fragment_layout_service_items">我的项目</string>
    <string name="personal_fragment_layout_work_time">时间设置</string>
    <string name="personal_fragment_layout_account">我的账户</string>
    <string name="personal_fragment_layout_credit">积分中心</string>
    <string name="personal_fragment_layout_my_comment">我的评论</string>
    <string name="personal_fragment_layout_setting">设置</string>
    <string name="personal_fragment_layout_user_card">我的微名片</string>
    <string name="personal_fragment_ranging">排行榜</string>
    <string name="qr_code_body">扫我关注＂9358＂</string>
    <string name="qr_code_remark">点技师，约项目，就上9358</string>
    <string name="qr_code_share">分享名片</string>
    <string name="personal_fragment_join_club">请先加入会所</string>
    <string name="personal_fragment_wait_check">请等待会所审核</string>
    <string name="personal_fragment_status_check">所在会所未开放该功能</string>
    <string name="main_fragment_tech_status_select">状态不可更改</string>
    <string name="main_fragment_tech_status_club">您还尚未成功加入会所</string>
    <string name="title_activity_settings">设置</string>
    <string name="settings_activity_about_us">关于我们</string>
    <string name="settings_activity_modify_password">修改密码</string>
    <string name="settings_activity_suggest">意见反馈</string>
    <string name="settings_activity_work">上班时间</string>
    <string name="settings_activity_project">服务项目</string>
    <string name="setting_activity_layout_exit">退出登录</string>
    <string name="setting_activity_quit_club">退出会所</string>
    <string name="setting_activity_join_club">加入会所</string>
    <string name="logout_tips">退出后无法及时接收到相关消息，是否确认退出？</string>
    <string name="join_club_success_tips">加入%1$s会所成功(审核中)</string>
    <string name="feedback_hint">点击输入反馈...</string>
    <string name="feedback_result">已成功提交，感谢您的反馈！</string>
    <string name="feedback_empty_tips">反馈信息不能为空，请输入您的意见！</string>
    <string name="title_activity_data_edit">资料编辑</string>
    <string name="edit_activity_text_view_tip">最多可以添加8张图片，单击可以删除图片。</string>
    <string name="edit_activity_text_view_desc">基本资料</string>
    <string name="edit_activity_text_view_head">头像</string>
    <string name="edit_activity_text_view_change_head">更改头像</string>
    <string name="edit_activity_text_view_change_head_title">选择更换头像</string>
    <string name="edit_activity_text_view_name">姓名</string>
    <string name="edit_activity_text_view_id">编号</string>
    <string name="edit_activity_text_view_gender">性别</string>
    <string name="edit_activity_text_view_place">籍贯</string>
    <string name="edit_activity_text_view_phone">手机</string>
    <string name="edit_activity_text_view_introduce">介绍</string>
    <string name="edit_activity_text_view_introduce_desc">请自我介绍(介绍自己来自哪里,介绍自己的姓名,介绍姓名时一定要吸引人,你的姓和名字...)</string>
    <string name="edit_activity_delete_album">您确认要删除这张图片？</string>
    <string name="edit_activity_select_native_place">请选择</string>
    <string name="only_number_and_char">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="app_info_title">关于小摩豆</string>
    <string name="check_update">检查更新</string>
    <string name="app_info_name">9358技师版</string>
    <string name="reward_amount">打赏:%1$d元</string>
    <string name="current_work_status">目前状态：</string>
    <string name="current_work_time">上班时间：</string>
    <string name="status_free">闲</string>
    <string name="status_busy">忙</string>
    <string name="work_day_text">重复天数</string>
    <string name="work_time_text">时间设置</string>
    <string name="time_activity_desc">注:客户只能预约您的上班时间.</string>
    <string name="operation_invalid">您尚未设置时间或重复天数</string>
    <string name="save">保存</string>
    <string name="none_selected">未选择</string>
    <string name="save_waiting">正在保存，请稍后</string>
    <string name="consume">提现</string>
    <string name="consume_record">%1$d元</string>
    <string name="reward_record">+%1$d元</string>
    <string name="customer_reward">用户打赏</string>
    <string name="coupon_commission">优惠券提成</string>
    <string name="clock_commission">点钟券提成</string>
    <string name="order_commission">付费预约提成</string>
    <string name="consume_tip">关注＂9358服务＂公众号，登录提现</string>
    <string name="draw_money_failure">提现失败，所在会所尚未开放该权限</string>
    <string name="user_reward_detail">客户打赏明细</string>
    <string name="coupon_reward_detail">优惠券提成明细</string>
    <string name="paid_coupon_detail">点钟券提成明细</string>
    <string name="paid_order_detail">付费预约提成明细</string>
    <string name="time_card_detail">次卡提成明细</string>
    <string name="commission_detail">分佣收入明细</string>
    <string name="modify_password_old_hint">输入原密码</string>
    <string name="modify_password_new_hint">请输入6-20位新密码，仅限字母和数字</string>
    <string name="modify_password_confirm_hint">重新输入密码</string>
    <string name="modify_password_change_confirm_err">两次输入的新密码不统一</string>
    <string name="modify_password_failed">修改密码失败</string>
    <string name="service_item">项目</string>
    <string name="service_price">价格（元）</string>
    <string name="service_time">时间（分钟）</string>
    <string name="confirm_select">确认选择</string>
    <string name="no_service_item">暂无服务项目</string>
    <string name="title_activity_clip_picture">裁剪照片</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">[位置信息]</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_prefix">[语音]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="video_call">[视频通话]</string>
    <string name="recent_status_expression">[动态表情]</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="request_user_reward">"<i></i>万水千山总是情<br />打赏两个行不行~"</string>
    <string name="beg_reward">求打赏</string>
    <string name="send_request_user_reward">确认发送＂求打赏＂信息？</string>
    <string name="accept">接受</string>
    <string name="finish">已完成</string>
    <string name="know">已完成</string>
    <string name="order_cancel">已取消</string>
    <string name="refuse">拒绝</string>
    <string name="common_greeting_format">确认发送＂%1$s＂信息？</string>
    <string name="no_paid_coupon">抱歉！暂无点钟券！</string>
    <string name="no_coupon">抱歉！暂无可用优惠券！</string>
    <string name="send_coupon_msg_format"><i>求点钟</i>立减<span>%1$d</span>元<b>%2$s</b></string>
    <string name="send_fail">发送消息失败,</string>
    <string name="error_send_invalid_content">你发送了不合法的消息内容</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="error_send_not_in_the_group">你已经不在此群了</string>
    <string name="use_not_login">用户已下线</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该消息？</string>
    <string name="pending_order">待接受</string>
    <string name="accepted_order">已接受</string>
    <string name="completed_order">已完成</string>
    <string name="order_list_item_loading">点击或者上拉，加载更多数据</string>
    <string name="order_list_item_no_more"> ^_^, 没有更多数据</string>
    <string name="order_list_item_empty">=_=!!, 还没有数据哦</string>
    <string name="order_status_operation_accept">接受</string>
    <string name="order_status_operation_reject">拒绝</string>
    <string name="order_status_operation_complete">完成</string>
    <string name="order_status_operation_expire">失效</string>
    <string name="order_status_operation_delete">删除订单</string>
    <string name="order_remain_time_label">剩余接单时间：</string>
    <string name="order_item_remain_time_label">剩余接单时间</string>
    <string name="order_remain_time_minutes">分钟</string>
    <string name="amount_unit_format">%1$d元</string>
    <string name="order_detail_down_payment">预付款</string>
    <string name="order_detail_order_time">预约时间</string>
    <string name="order_detail_order_service">预约项目</string>
    <string name="paid_coupon_user_detail_activity_header_status">全部状态</string>
    <string name="paid_coupon_user_detail_activity_accept">未使用</string>
    <string name="paid_coupon_user_detail_activity_complete">已使用</string>
    <string name="paid_coupon_user_detail_activity_expire">已过期</string>
    <string name="customer_name">客户姓名</string>
    <string name="customer_telephone">手机号码</string>
    <string name="customer_remark">备注 </string>
    <string name="contact_hint_remark">可添加描述信息</string>
    <string name="contact_hint_phone">请输入手机号</string>
    <string name="toast_useful_name">请输入姓名</string>
    <string name="edit_remark">备注名 </string>
    <string name="edit_remark_message">备注信息 </string>
    <string name="add_or_edit_name">为联系添加备注名</string>
    <string name="max_text_length">30</string>
    <string name="main_tech_order">我的订单</string>
    <string name="main_tech_order_all">全部</string>
    <string name="main_tech_order_all_finish_text">订单都处理完啦，感觉自己棒棒哒～</string>
</resources>