<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/coupo_status_all"
        style="@style/popup_window_button_style"
        android:text="@string/paid_coupon_user_detail_activity_header_status"/>

    <Button
        android:id="@+id/coupon_status_accept"
        style="@style/popup_window_button_style"
        android:text="@string/paid_coupon_user_detail_activity_accept"/>

    <Button
        android:id="@+id/coupon_status_complete"
        style="@style/popup_window_button_style"
        android:text="@string/paid_coupon_user_detail_activity_complete"/>

    <Button
        android:id="@+id/coupon_status_expire"
        style="@style/popup_window_button_style"
        android:text="@string/paid_coupon_user_detail_activity_expire"/>

</LinearLayout>
