<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/personal_description_height"
    android:background="@color/colorServiceHead"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="@color/colorBody"
        android:textSize="@dimen/fontBody"
        android:text="@string/service_item"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/colorBody"
        android:textSize="@dimen/fontBody"
        android:text="@string/service_price"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/colorBody"
        android:textSize="@dimen/fontBody"
        android:text="@string/service_time"/>
</LinearLayout>