<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    >
    <include layout="@layout/toolbar"></include>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_remark"
            android:background="@color/app_bg"
            android:textSize="@dimen/fontBody"
            android:padding="@dimen/padding_12"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_15"
        android:background="@color/color_white"

        >
        <EditText
            android:id="@+id/et_remark_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@null"
            android:hint="@string/add_or_edit_name"
            android:textColorHint="@color/colorRemarkText"
            android:maxLength="16"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_remark_message"
        android:background="@color/app_bg"
        android:textSize="@dimen/fontBody"
        android:padding="@dimen/padding_12"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/color_white"
        android:paddingTop="@dimen/margin_15"
        >
        <com.xmd.technician.widget.FlowLayout
            android:id="@+id/limit_project_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/inter_space"
            />
        <View
            style="@style/horizontal_divider_line"
            android:layout_marginTop="6dp"
            android:paddingLeft="@dimen/inter_space"
            android:paddingRight="@dimen/inter_space"
            />
        <EditText
            android:id="@+id/ed_remark_message"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_remark_height"
            android:hint="@string/contact_hint_remark"
            android:textColorHint="@color/colorRemarkText"
            android:padding="@dimen/padding_10"
            android:textSize="@dimen/fontHead"
            android:gravity="top"
            android:background="@null"
            android:maxLength="30"
            />
        <TextView
            android:id="@+id/text_remark_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:text="@string/max_text_length"
            android:layout_marginRight="@dimen/inter_space"
            android:layout_marginBottom="@dimen/margin_5"
            />

    </LinearLayout>


    <Button
        android:id="@+id/btn_save_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/order_detail_section_btn_height"
        android:enabled="false"
        android:text="@string/save"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:background="@drawable/btn_chat_selector"
        android:textColor="@color/color_white"
        android:textSize="@dimen/fontHead"
        />

</LinearLayout>