<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/main_page_margin_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/main_tech_order_all"
        style="@style/relative_layout_title_style">

        <TextView
            style="@style/main_fragment_layout_title_left_style"
            android:drawableLeft="@drawable/icon_mian_order"
            android:text="@string/main_tech_order" />

        <TextView
            style="@style/main_fragment_layout_title_right_style"
            android:text="@string/main_tech_order_all" />
    </RelativeLayout>

    <ListView
        android:id="@+id/main_order_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <View style="@style/horizontal_divider_line" />

    <TextView
        android:id="@+id/order_figure_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/small_space"
        android:paddingTop="@dimen/small_space"
        android:textColor="@color/colorBody"
        android:textSize="@dimen/fontBody"
        android:text="@string/main_tech_order_all_finish_text"
        android:visibility="gone"/>
</LinearLayout>