<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xmd.technician.window.PreLoginActivity">

    <include layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_button_height"
        android:paddingLeft="@dimen/personal_padding"
        android:paddingRight="@dimen/personal_padding"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/personal_padding"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/fontBody"
            android:text="+86"/>

        <com.xmd.technician.widget.ClearableEditText
            android:id="@+id/login_username_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/personal_padding"
            android:layout_marginRight="@dimen/personal_padding"
            android:background="@android:color/transparent"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/colorBody"
            android:textSize="@dimen/fontBody"
            android:textColorHint="@color/colorRemarkText"
            android:hint="@string/login_account_hint"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_divide_height"
        android:background="@color/colorLineDivide" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/personal_margin"
        android:layout_marginLeft="@dimen/personal_padding"
        android:layout_marginRight="@dimen/personal_padding"
        android:background="@drawable/login_button_main_selector"
        android:textColor="@android:color/white"
        android:textSize="@dimen/fontTitle"
        android:text="@string/next_step"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/personal_margin"
        android:layout_marginLeft="@dimen/personal_padding"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/fontBody"
        android:text="@string/note"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/work_time_padding"
        android:layout_marginRight="@dimen/work_time_padding"
        android:layout_marginTop="@dimen/search_margin"
        android:lineSpacingExtra="@dimen/search_margin"
        android:textColor="@color/colorBody"
        android:textSize="@dimen/fontNormal"
        android:text="@string/pre_login_tips"/>

    <Button
        android:id="@+id/toggle_server_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent" />

    <Spinner
        android:id="@+id/server_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/update_server_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        android:visibility="gone" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_company"
        android:gravity="center"
        android:textSize="@dimen/fontTitle"
        android:text="@string/app_version_code"/>

    <TextView
        android:id="@+id/tv_company"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_space"
        android:text="@string/company_name"/>
    
</LinearLayout>
